015375 Wrong per-file progress info when several files are selected
015216 Merge btgui patches from mkbosmans.
015185 btgncli, broken handling of updates.
015087 Add Arch Linux package to listing.
015074 context.peers does not work with "for all contexts" flag set.
015068 Crash when reading faulty IP filter range.
015049 Update Openwrt build.
015048 btgvs, add lirc support and freevo integration.
	
BTG version 0.9.9
-----------------
The following bugs were fixed:

014834 btgncli, setting limits.
014794 Regression: short_open_tag=off.
014792 Popup warning when adding a URL to download.
014583 Possibility to allocate files.
014407 Show limits ranges in geometrical progression.
014372 Building issue (at configure step).
014371 Does not compile against boost 1.36.
014353 btgncli doc doesn't say what key configuration does.
014351 WAN annouce ip not used.
014308 btgui: infohash and announce_url in Details.
014305 Limits and sel.files persistance when move betw. sessions.
014280 btgncli, add sorting by..
014271 Typo in btg.js.
014268 Update Freebsd notes in howto.
014223 libsigc++-2.2.* is not supported.
013963 btgcli limit setting error.
013962 wwwUI response times optimization.
011275 Use UPnP support from libtorrent.

BTG version 0.9.8
-----------------
The following bugs were fixed:

014142 Compilation broke on curl link with --as-needed LDFLAG.
014067 BTG SVN fails to compile with SVN Libtorrent.
014061 XMLRPC_Client fails to parse some XMLs.
013987 btgcli can't read commands from file.
013985 Installed xmlrpc-epi should be tested.
013984 Remove bundled expat.
013983 Installed plotmm should be tested.
013975 Incorrect torrent statuses.
013971 Display build and revision numbers on the wwwUI pages.
013964 btgcli: Do not print LF when displaying downloaded pieces.
013961 Race-condition in btgui (in peer-list).
013932 btg-daemon-0.9.8 not installable on debian.
013931 Bad URL displayed after DEB install.
013859 Remove ncurses from btgcli.