@@ -22,7 +22,6 @@
 
 #include "allocate_resources.h"
 #include "allocate_resources_impl.h"
-//#include "allocate_resources_impl_lt.h"
 
 #include <cassert>
 #include <algorithm>
